[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["jupysec"]

[project]
name = "jupysec"
version = "0.1.13"
authors = [
  { name="Joe Lucas", email="joe@joetl.com" },
]
description = "Jupyter Security Utilities"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JosephTLucas/jupysec"
"Bug Tracker" = "https://github.com/JosephTLucas/jupysec/issues"

[project.optional-dependencies]
jupyterlab = ["jupysec_extension"]